--- a/index.html
+++ b/index.html
@@ -1,16 +1,59 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Meme Roulette</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+      #meme-container {
+        padding: 20px 0 10px 0;
+        width: 500px;
+      }
+      #main-title {
+        font-size: 64px;
+        font-family: arial, sans-serif;
+        padding: 10px 0 0 5px;
+      }
+      body {
+        background: #E0EAFC;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      }
+    </style>
+
+    <link rel="stylesheet" href="roulette.css">
   </head>
   <body>
+
+    <div class="container">
+      <div class="d-flex flex-column">
+        <div class="d-flex justify-content-center">
+          <h1 id="main-title">Meme Roulette</h1>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center">
+        <img src="https://i.redd.it/ta0fi26e5ws51.jpg" alt="first meme of the project" id="meme-container">
+        <div id="slot-trigger">
+          <div class="arm">
+              <div class="knob"></div>
+          </div>
+          <div class="arm-shadow"></div>
+          <div class="ring1">
+              <div class="shadow"></div>
+          </div>
+          <div class="ring2">
+              <div class="shadow"></div>
+          </div>
+        </div>
+      </div>
+
       
+    </div>
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
